--- a/ShamsAlShamoos01.Client/Client/wwwroot/css/app.css
+++ b/ShamsAlShamoos01.Client/Client/wwwroot/css/app.css
@@ -24,7 +24,7 @@
 --------------------------------------------- */
 body, html, .page, .rtl, main, article {
     font-family: 'B Mitra', sans-serif;
-    /*direction: rtl;*/
+    direction: rtl;
     text-align: right;
 }
 
