اعمال تغییرات بهینه 140409071150

--- a/ShamsAlShamoos01.Client/Client/Pages/Shamoos/Shared/NavMenu.razor
+++ b/ShamsAlShamoos01.Client/Client/Pages/Shamoos/Shared/NavMenu.razor
@@ -43,6 +43,13 @@
                 <span class="ms-2">جدول ثبت فاکتور</span>
             }
         </NavLink>
+        <NavLink class="nav-link text-white mb-2 d-flex align-items-center" href="image-search">
+            <span class="oi oi-plus"></span>
+            @if (!DesktopCollapsed)
+            {
+                <span class="ms-2">تصویر</span>
+            }
+        </NavLink>
         <NavLink class="nav-link text-white mb-2 d-flex align-items-center" href="counter">
             <span class="oi oi-plus"></span>
             @if (!DesktopCollapsed)
