--- a/ShamsAlShamoos01.Client/Client/Pages/Shamoos/Shared/NavMenu.razor
+++ b/ShamsAlShamoos01.Client/Client/Pages/Shamoos/Shared/NavMenu.razor
@@ -35,7 +35,15 @@
             {
                 <span class="ms-2">سایر</span>
             }
+        </NavLink>      
+        <NavLink class="nav-link text-white mb-2 d-flex align-items-center" href="CreateQRFromtxt01">
+            <span class="oi oi-document"></span>
+            @if (!DesktopCollapsed)
+            {
+                <span class="ms-2">ایجاد بارکد از متن</span>
+            }
         </NavLink>
+
         <NavLink class="nav-link text-white mb-2 d-flex align-items-center" href="history-register">
             <span class="oi oi-document"></span>
             @if (!DesktopCollapsed)
