اعمال تغییرات بهینه 140412071328

--- a/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/FetchData.razor
+++ b/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 @using ShamsAlShamoos03.Client.Client.Pages.Shamoos.Shared
-@layout MainLayout
+@* @layout MainLayout *@
 @inject HttpClient Http
 
 <PageTitle>Weather forecast</PageTitle>
