اعمال تغییرات بهینه 140412071415

--- a/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/Counter.razor
+++ b/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/Counter.razor
@@ -1,5 +1,5 @@
 ﻿@page "/counter"
-@layout ShamsAlShamoos03.Client.Client.Pages.Shamoos.Shared.MainLayout
+@layout ShamsAlShamoos03.Client.Client.Shared.MainLayout
 
 <PageTitle>Counter</PageTitle>
 
