--- a/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/CreateQRFromtxt01.razor
+++ b/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/CreateQRFromtxt01.razor
@@ -1,5 +1,5 @@
 ﻿@page "/CreateQRFromtxt01"
-@layout ShamsAlShamoos03.Client.Client.Pages.Shamoos.Shared.MainLayout
+@layout ShamsAlShamoos03.Client.Client.Shared.MainLayout
 @inject NavigationManager Nav
 @inject HttpClient Http
 
