--- a/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/HistoryRegister.razor
+++ b/ShamsAlShamoos03.Client/Client/Pages/Shamoos/Pages/HistoryRegister.razor
@@ -1,5 +1,5 @@
 ﻿@page "/history-register"
-@layout ShamsAlShamoos03.Client.Client.Pages.Shamoos.Shared.MainLayout
+@layout ShamsAlShamoos03.Client.Client.Shared.MainLayout
 @inject NavigationManager Nav
 @inject HttpClient Http
 @inject HistoryRegisterService HistoryService
